--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -62,13 +62,15 @@
             </li>
         </ul>
 
-        <a class="navbar-brand text-white" href="#">Shopping App</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a routerLink="/home" class="text-center navbar-brand text-white">Shopping App</a>
+        <button class="navbar-toggler" type="button">
           <span class="navbar-toggler-icon"></span>
         </button>
 
         <form class="form-inline my-2 my-lg-0">
             <button class="btn btn-dark my-2 my-sm-0" type="submit"><i class="fa fa-cart-plus"></i>Carrito</button>
+
+            <a routerLink="/producto"><button class="btn btn-dark my-2 mx-1 my-sm-0" type="submit"><i class="fa fa-product-hunt"></i>Agregar producto</button></a>
 
             <a routerLink="/login"><button class="btn btn-dark my-2 mx-1 my-sm-0" type="submit"><i class="fa fa-sign-in"></i>Iniciar sesión</button></a>
         </form>
