se modifico el footer y home con css

--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,82 +1,56 @@
-<!-- Footer -->
-<footer class="page-footer font-small blue pt-4">
 
-    <!-- Footer Links -->
-    <div class="container-fluid text-center text-md-left">
+<html lang="en">
+<div>
+    <meta charset="UTF-8">
+    <title>Footer Design</title>
+  </div>
+<body>
+   
+    <footer>
+       
+       <div class="container-footer-all mt-5">
+        
+            <div class="container-body">
 
-      <!-- Grid row -->
-      <div class="row">
+                <div class="colum1">
+                    <h1>TECNO PLUS</h1>
 
-        <!-- Grid column -->
-        <div class="col-md-6 mt-md-0 mt-3">
+                    <p>Somos una tienda de tecnologia expertos en hardware y software te 
+                      ayudamos a elegir tus componentes a la medida que tus los deseas.</p>
 
-          <!-- Content -->
-          <h5 class="text-uppercase">Footer Content</h5>
-          <p>Here you can use rows and columns here to organize your footer content.</p>
+                </div>
 
-        </div>
-        <!-- Grid column -->
+                <div class="colum2">
 
-        <hr class="clearfix w-100 d-md-none pb-3">
-
-        <!-- Grid column -->
-        <div class="col-md-3 mb-md-0 mb-3">
-
-            <!-- Links -->
-            <h5 class="text-uppercase">Links</h5>
-
-            <ul class="list-unstyled">
-              <li>
-                <a href="#!">Link 1</a>
-              </li>
-              <li>
-                <a href="#!">Link 2</a>
-              </li>
-              <li>
-                <a href="#!">Link 3</a>
-              </li>
-              <li>
-                <a href="#!">Link 4</a>
-              </li>
-            </ul>
-
+                    <h1>Redes Sociales</h1>
+                    <ul class="list-unstyled">
+                      <li>
+                        <a class="dropdown-item" href="#"><i class="fa fa-facebook"></i> 
+                            Facebook
+                        </a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"><i class="fa fa-whatsapp"></i>
+                            WhatssApp
+                       </a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"><i class="fa fa-instagram"></i>
+                            Instagram
+                        </a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="#"><i class="fa fa-envelope"></i> 
+                            Correo Electrónico
+                        </a>
+                  </ul>
+    
+              </div>
+    
           </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-3 mb-md-0 mb-3">
-
-            <!-- Links -->
-            <h5 class="text-uppercase">Links</h5>
-
-            <ul class="list-unstyled">
-              <li>
-                <a href="#!">Link 1</a>
-              </li>
-              <li>
-                <a href="#!">Link 2</a>
-              </li>
-              <li>
-                <a href="#!">Link 3</a>
-              </li>
-              <li>
-                <a href="#!">Link 4</a>
-              </li>
-            </ul>
-
-          </div>
-          <!-- Grid column -->
-
+          &copy; {{anio}} Shopping
       </div>
-      <!-- Grid row -->
+    </footer>
+    
 
-    </div>
-    <!-- Footer Links -->
-
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright AppOnline
-    </div>
-    <!-- Copyright -->
-
-  </footer>
-  <!-- Footer -->
+          
