--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -25,47 +25,94 @@
   </a>
 </div>
 
-
-<div class="row row-cols-1 row-cols-md-3 mt-4">
-    <div class="col mb-4">
-        <div class="card h-100">
-            <img src="../../assets/cpu.png" class="card-img-top" width="50">
-            <div class="card-body">
-                <h5 class="card-title">Intel Core i7-8700</h5>
-                <p class="card-text">
-                    Intel Core i7 8° generación, 3.2 GHz, 12 MB, LGA 1151 (Socket H4), PC, 14 nm, i7-8700</p>
-                <p class="card-text text-success">$289.00</p>
-            </div>
-        </div>
-    </div>
-    <div class="col mb-4">
-        <div class="card h-100">
-            <img src="../../assets/ram.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a short card.</p>
-                <p class="card-text text-success">$289.00</p>
-            </div>
-        </div>
-    </div>
-    <div class="col mb-4">
-        <div class="card h-10">
-            <img src="../../assets/mouse.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text text-success">$289.00</p>
-            </div>
-        </div>
-    </div>
-    <div class="col mb-4">
-        <div class="card h-10">
-            <img src="../../assets/mouse.png" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-        </div>
-    </div>
+<div class="alert alert-primary mt-5">
+ DESTACADOS
 </div>
 
+<div class="card-deck mt-5">
+    <div class="card">
+      <img src="../../assets/i9-10000.png"  class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">
+            Intel Core i9-10900k 3.70Ghz Base</p>
+        <p class="card-text text-success">$675.00</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="../../assets/furyx.png"  class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Kingston HyperX Fury Black 16GB DDR4 3200Mhz (2x8GB)</p>
+        <p class="card-text text-success">$95.00</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="../../assets/R.png"  class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">AMD Ryzen 9 3900X 3.8 GHz BOX</p>
+        <p class="card-text text-success">562.99.00</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="alert alert-primary mt-5">
+    OFERTAS DE 20% 40% Y 65% DE DESCUENTO
+   </div>
+   
+
+  <div class="card-deck mt-5">
+    <div class="card">
+      <img src="../../assets/MSI MAG.png"  class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text"> MSI MAG X570 TOMAHAWK WIFI</p>
+        <p class="card-text text-danger"><del> $260.00  </del> </p> <p class="card-text text-success">  $220.00</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="../../assets/baracuda.png"  class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Seagate BarraCuda Q1 SSD 480GB SATA 3</p>
+        <p class="card-text text-danger"><del> $70.00  </del> </p> <p class="card-text text-success">  $50.00</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="../../assets/case.png"  class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Thermaltake AH T600 Cristal Templado USB 3.0</p>
+        <p class="card-text text-danger"><del> $270.00  </del> </p> <p class="card-text text-success">  $210.00</p>
+      </div>
+    </div>
+  </div>
+
+<div class="alert alert-primary mt-5">
+POPULARES
+</div>
+   
+  <div class="card-deck mt-5">
+    <div class="card">
+      <img src="../../assets/3090.png"  class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Zotac GAMING GeForce RTX 3090 Trinity 24GB GDDR6X</p>
+        <p class="card-text text-success">$1759.99</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="../../assets/avenger.png"  class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Intel Core™ i9-10900K 3.70Ghz Avengers Edition</p>
+        <p class="card-text text-success">$699.99</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="../../assets/asus.png"  class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Asus ROG Strix G17 G712LV-H7077 Intel Core i7-10750H/32GB/1TB SSD/RTX 2060/17.3"</p>
+        <p class="card-text text-success">$1795.00</p>
+      </div>
+    </div>
+  </div>
