--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -3,6 +3,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
 
+            <a routerLink="/home" class="text-center navbar-brand text-white"><img src="assets/logo.png" width="150" height="40"></a>
+            <button class="navbar-toggler" type="button">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
             <li class="nav-item dropdown">
                 <button class="nav-link text-white btn btn-dark" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Categorias
