--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,28 +1,28 @@
-<div class="mt-4 container-small">
-    <div class="container form">
-        <div class="container">
+<div class="mt-5">
+    <div class="container">
+        <div class="wrap-login100 p-t-50 p-b-90">
             <form (ngSubmit)="onLogin(loginForm)" class="login100-form validate-form flex-sb flex-w" #loginForm="ngForm">
-
+                
                 <span class="mt-4">
-                    Iniciar sesión
-                </span>
+                    <h1>Iniciar Sesion</h1> 
+                  </span>
 
-                <span class="text-danger " *ngIf="loginForm.submitted && loginForm.controls['email'].errors">
+                <span class="text-danger animated fadeIn" *ngIf="loginForm.submitted && loginForm.controls['email'].errors">
                     El correo es obligatorio
                 </span>
-                <div class="mt-3">
+                <div class="mt-5">
                     <input class="form-control" type="email" [(ngModel)]="usuario.email" name="email" placeholder="Correo electrónico" required>
                     <span class="focus-input100"></span>
                 </div>
 
-                <span class="text-danger" *ngIf="loginForm.submitted && loginForm.controls['password'].errors">La contraseña debe de ser más de 6 letras</span>
+                <span class="text-danger animated fadeIn" *ngIf="loginForm.submitted && loginForm.controls['password'].errors">La contraseña debe de ser más de 6 letras</span>
                 <div class="wrap-input100 m-b-16">
                     <input class="form-control mt-3" type="password" [(ngModel)]="usuario.password" name="password" minlength="6" placeholder="Contraseña" required>
                     <span class="focus-input100"></span>
                 </div>
 
                 <div class="flex-sb-m w-full p-t-3 p-b-24">
-                    <div class="mt-2">
+                    <div class="mt-5">
                         <input class="ml-1" [(ngModel)]=recordarme id="ckb1" type="checkbox" name="remember-me">
                         <label class="ml-2" for="ckb1">
                             Recordar mi usuario
@@ -41,7 +41,6 @@
                         Ingresar
                     </button>
                 </div>
-
             </form>
         </div>
     </div>
