--- a/src/app/componentes/registro/registro.component.css
+++ b/src/app/componentes/registro/registro.component.css
@@ -1,21 +1,15 @@
 .container {
     width: 500px;
     padding: 100px;
-    position: absolute;
+    display: flex;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
     background: #708090 ;
     text-align: center;
     border-radius: 24px;
+    min-height: calc(100vh - 100px - 300px);
     
   }
-
-
-.container[type = "text"]:focus,.container input[type = "password"]:focus{
-  width: 280px;
-  border-color: #2ecc71;
-}
 
 .mt-4{
     color: blanchedalmond;
